<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yarasabry.store2.AddActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <EditText
            android:id="@+id/update_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/btn"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/update_location"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/btn"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/start_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startdate"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="#a73fb5"
                />
            <Button
                android:id="@+id/start_time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/starttime"
                android:textSize="15sp"
                android:textColor="@color/btn" />
            <TextView
                android:id="@+id/update_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textColor="#a73fb5"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/end_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enddate"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/btn" />
            <Button
                android:id="@+id/end_time_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/endtime"
                android:textSize="15sp"
                android:textColor="#a73fb5" />
            <TextView
                android:id="@+id/update_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                android:textColor="@color/btn"/>


        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="80dp"
            android:text="@string/update"
            android:textSize="20sp"
            android:onClick="Update"
            android:textColor="@color/btn" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>


